data/derived/sp14/progs/unify/prog3840.ml.out
Characters 73-77:
  List.fold_left f base fs;;
                   ^^^^
Error: This expression has type 'a but an expression was expected of type
         'a -> 'b
       The type variable 'a occurs inside 'a -> 'b
